--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 
 body{
     font-size: 100%;
-    background: white;
+    background: #f3f5f6;
 }
 header{
     background-color:white;
@@ -42,14 +42,14 @@ header{
 .conteudoPrincipal{
     display: flex;
     flex-direction:row;
-    align-items: center;
-    justify-content: space-around;
     background: #f3f5f6;
+    align-items: center;
 
 }
 .conteudoPrincipalEscritoImagem{
     max-width: 40%;
     height: auto;
+    align-items: stretch;
 }
 .conteudoPrincipalEscrito{
     display: flex;
@@ -61,10 +61,57 @@ header{
     color: #003D59;
     font-weight: 700;
     font-size: 23px;
+    align-items: center;
 }
 .conteudoPrincipalEscritoSubtitulo{
     font-family: 'Quicksand', sans-serif;
     color: #003D59;
     font-weight: 700;
     font-size: 20px;
+    align-items: center;
 }
+.conteudoPrincipalEscritoBotao{
+    background-color: #71BECF;
+    width: 180px;
+    height: 60px;
+    border: none;
+    box-shadow: 4px 5px 4px #003D59;
+    border-radius: 20px;
+    font-family: 'Quicksand', sans-serif;
+    color: #003D59;
+    font-weight: 700;
+    font-size: 18px;
+    align-items: center;
+}
+.conteudoSecundario{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
+    margin-top: 48px;
+}
+.conteudoSecundarioTitulo{
+    border-top: 4px solid #003D59;
+    padding-top: 48px;
+    font-family: 'Quicksand', sans-serif;
+    color: #003D59;
+    font-weight: 700;
+    font-size: 24px;
+    margin-bottom: 16px;
+}
+.conteudoSecundarioParagrafo{
+    font-family: 'Quicksand', sans-serif;
+    color: #003D59;
+    font-weight: 700;
+    font-size: 19px;
+}
+.rodape{
+    padding: 32px;
+    border-top: 4px solid #003D59;
+ }
+ .imagemRodape{
+    max-width: 10%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+ }
