--- a/style.css
+++ b/style.css
@@ -70,7 +70,9 @@ header{
     align-items: center;
     justify-content:center;
     line-height: 2;
-    margin-top: 40px;
+    margin-top: 30px;
+    margin-right: 70px;
+    margin-left: 70px;
 }
 .conteudoPrincipalEscritoBotao{
     background-color: #71BECF;
@@ -84,7 +86,7 @@ header{
     font-weight: 700;
     font-size: 18px;
     align-items: center;
-    margin-top: 40px;
+    margin-top: 30px;
 }
 .conteudoSecundario{
     display: flex;
