--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ header{
     font-size: 20px;
     align-items: center;
     justify-content:center;
+    text-align: center;
     line-height: 2;
     margin-top: 30px;
     margin-right: 70px;
