--- a/style.css
+++ b/style.css
@@ -35,6 +35,10 @@ header{
     font-weight: 700;
     font-size: 20px;
 }
+.itemMenuCabecalho:hover{
+        color: #FB9334;
+        text-decoration: underline;
+}
 .conteudo{
     margin-bottom: 48px;
     border-top: 4px solid #003D59;
@@ -88,7 +92,14 @@ header{
     font-size: 18px;
     align-items: center;
     margin-top: 30px;
+    transition: 1s all;
+    cursor: pointer;
 }
+.conteudoPrincipalEscritoBotao:hover{
+    background: #FB9334;
+    transform: scale(1.2);
+}
+
 .conteudoSecundario{
     display: flex;
     flex-direction: column;
