--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ header{
     color: #003D59;
     font-weight: 700;
     font-size: 20px;
+    cursor: pointer;
 }
 .itemMenuCabecalho:hover{
         color: #FB9334;
